# gif2webm

./: LICENSE  README.md  pyproject.toml
gif2webm/: __main__.py
